# supSMSTAS

./: .gitignore  CHANGELOG.md  COPYING  MANIFEST.in  README.ja.md  README.md  setup.cfg
LICENSES/: GPL-3.0  MIT.txt
src/supSMSTAS/: UI.py  WFC.py  __main__.py  shape.py
