[metadata]
name = supSMSTAS
version = 0.0.1
author = sup39
author_email = sms@sup39.dev
description = A tool to support Super Mario Sunshine Tool Assisted Speedrun/Superplay
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = COPYING LICENSES/*
url = https://github.com/sup39/supSMSTAS
project_urls =
  Bug Tracker = https://github.com/sup39/supSMSTAS/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires =
  sup-dolphin-memory-lib ~= 0.1.0
  matplotlib ~= 3.5
  PyQt5 ~= 5.15

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  supSMSTAS = supSMSTAS.__main__:main
